# leaf

./: .gitignore  .gitmodules  Cargo.toml  routes.md
configs/: config-example.conf
leaf/: Cargo.toml  build.rs
leaf-android/: Cargo.toml  Leaf.java  build.sh
leaf-android/src/: callback.rs  err.rs  lib.rs
leaf-android/test/: Runner.java  build.sh
leaf-bin/: Cargo.toml
leaf-bin/src/: main.rs
leaf-darwin/: .gitignore  build.sh  build_ios.sh  build_xcframework.sh  build_xcframework_xcode.sh  gen_header.sh  leaf-bridge.h  leaf-c.h  leaf.swift  module.modulemap
leaf-darwin/configs/: debug.xcconfig  release.xcconfig
leaf-darwin/leaf.xcodeproj/: project.pbxproj
leaf-darwin/leaf.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
leaf-darwin/leaf.xcodeproj/project.xcworkspace/xcuserdata/alex.xcuserdatad/: UserInterfaceState.xcuserstate
leaf-darwin/leaf.xcodeproj/xcshareddata/xcschemes/: leaf-ios.xcscheme  leaf-macos.xcscheme
leaf-darwin/leaf.xcodeproj/xcuserdata/alex.xcuserdatad/xcschemes/: xcschememanagement.plist
leaf-ffi/: Cargo.toml  cbindgen.toml  leaf-c.h
leaf-ffi/src/: callback.rs  lib.rs
leaf-proxie/: Cargo.toml  build.rs
leaf-proxie/proto/: echo.proto  proxie.proto  runat.proto
leaf-proxie/src/: callback.rs  echo.rs  lib.rs  main.rs  proxie.rs  runat.rs
leaf-uwp/: Cargo.toml  build.rs  register.cmd
leaf-uwp/appx/: AppxManifest.xml
leaf-uwp/src/: main.rs
leaf/src/: callback.rs  extra.rs  lib.rs  lwiperr.c  nslog.rs  session.rs  sys.rs  util.rs  win.rs
leaf/src/app/: dispatcher.rs  logger.rs  mod.rs  stat.rs  stats.rs
leaf/src/app/inbound/: manager.rs  mod.rs  packet_listener.rs
leaf/src/app/outbound/: selector.rs  selector_cache.rs
leaf/src/common/: cmd_windows.rs  crypto.rs  io.rs  mod.rs  sniff.rs
leaf/src/config/: external_rule.rs  geosite.rs
leaf/src/config/conf/: config.rs  extra.rs  mod.rs
leaf/src/config/internal/: config.proto  config.rs
leaf/src/config/json/: config.rs
leaf/src/option/: mod.rs
leaf/src/proxy/: mod.rs  stream.rs  win.rs
leaf/src/proxy/drop/: tcp.rs  udp.rs
leaf/src/proxy/http/inbound/: mod.rs  stream.rs  tcp.rs
leaf/src/proxy/packet/: endpoint.rs  fd_sink.rs  inbound.rs  mod.rs  stack.rs  tcp_sink.rs  udp_sink.rs
leaf/src/proxy/packet/netstack/: endpoint.rs  mod.rs  stack.rs  stack_impl.rs
leaf/src/proxy/tls/inbound/: tcp.rs
leaf/src/proxy/tls/outbound/: tcp.rs
leaf/src/proxy/tun/: inbound.rs
leaf/src/proxy/tun/netstack/: tcp_stream.rs
leaf/src/proxy/ws/inbound/: stream.rs  tcp.rs
leaf/src/proxy/ws/outbound/: stream.rs  tcp.rs
leaf/tests/: test_in_chain_1.rs
netstack/: Cargo.toml
netstack-smoltcp/: Cargo.toml
netstack-smoltcp/src/: endpoint.rs  lib.rs  stack.rs  tcp_listener.rs  tcp_stream.rs  udp.rs  utils.rs
netstack/src/: lib.rs
netstack/src/stack/: mod.rs  stack.rs  stack_impl.rs  tcp_stream.rs  tcp_stream_impl.rs
