[workspace]
members = [
    "leaf",
    "leaf-bin",
    "leaf-ffi",
    "leaf-plugins/shadowsocks",
    # MARKER BEGIN
    "leaf-android",
    "leaf-proxie",
    # MARKER EDN
]
default-members = ["leaf-bin"]

[profile.release]
opt-level = 3
lto = true
# codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
