[package]
name = "leaf-ffi"
version = "0.1.0"
authors = ["eycorsican <eric.y.corsican@gmail.com>"]
edition = "2018"

[lib]
name = "leaf"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib"] # MARKER BEGIN - END

[features]
default = [
    "default-ring",
]

default-ring = [
    "leaf/default-ring",

    # MARKER BEGIN
    "callback",
    # MARKER- END
]

default-openssl = [
    "leaf/default-openssl",

    # MARKER BEGIN
    "callback",
    # MARKER- END
]

auto-reload = ["leaf/auto-reload"]

# MARKER BEGIN
callback = ["leaf/callback"]
# MARKER- END

[dependencies]
leaf = { path = "../leaf", default-features = false, optional = true }
tokio = { version = "1", features = ["rt"] }
futures = "0.3"
libc = "0.2.1"

[build-dependencies]
bindgen = "0.57"

