[package]
name = "leaf-proxie"
version = "0.1.0"
#authors = ["nobody <noreply>"]
edition = "2021"

[[bin]]
name = "leaf-proxie"
path = "bin/main.rs"

[features]
default = [
    "default-ring",
]

default-ring = [
    "leaf/default-ring",
    "leaf/ctrlc",
    "auto-reload",
    "stats",
    "callback",
]

default-openssl = [
    "leaf/default-openssl",
    "leaf/ctrlc",
    "auto-reload",
    "stats",
    "callback",
]

auto-reload = ["leaf/auto-reload"]
stats = ["leaf/stats"]
callback = ["leaf/callback"]

[dependencies]
leaf = { path = "../leaf", default-features = false, optional = true }

tonic = "0.6"
tonic-web = "0.2"
prost = "0.9"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.6"